<resources>

    <!-- 当前版本版本 -->
    <string name="app_version_name">V2.0.2</string>
    <!-- 当前版本，和服务器数据库的一致 -->
    <string name="app_version_num">9</string>
    <!-- 上一次的版本号 -->
    <string name="last_app_version_num">8</string>
    <!-- 普通操作 -->
    <string name="app_name">康兮</string>
    <string name="search">搜搜</string>
    <string name="can_input_search_key">关键词</string>
    <string name="load_more_data">加载更多数据</string>
    <string name="action_settings">操作设置</string>
    <string name="info_ops_comment">评论</string>
    <string name="info_ops_good">点赞</string>
    <string name="info_ops_bad">无用</string>
    <string name="share_prepare_top_hint">分享，让我们更懂健康</string>
    <string name="share_prepare_eat">饮食</string>
    <string name="share_prepare_go">运动</string>
    <string name="share_prepare_info">信息</string>
    <string name="share_prepare_back">返回</string>
    <string name="share_prepare_bottom_back">返回</string>
    <string name="share_mine_detail_good">赞</string>
    <string name="share_mine_detail_comment">评论</string>
    <string name="share_mine_detail_tag">标签</string>
    <string name="share_mine_detail_edit">编辑</string>
    <string name="share_mine_detail_back">返回</string>
    <string name="share_health_input">请输入内容</string>
    <string name="share_tag_input">请输入您要分享的标签</string>
    <string name="share_health_addpic">添加图片</string>
    <string name="share_health_addtag">添加标签</string>
    <string name="app_feed_back">我要吐槽</string>
    <string name="app_feed_back_btn">吐槽</string>
    <string name="app_feed_back_into_text">可以进入群进行定制化服务哦：</string>
    <string name="app_feed_back_into_scan_text">可以扫描参与：</string>
    <!-- 关于分页 -->
    <string name="xlistview_header_hint_name">名字</string>
    <string name="xlistview_header_hint_reply">回复</string>
    <string name="xlistview_header_hint_onehourago">1小时以前</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 关于注册登陆 -->
    <string name="login_reg_logininput_account">请输由字母和数字组成的账号，用来登录</string>
    <string name="login_reg_logininput_account_for_forget">请输登录账号</string>
    <string name="login_reg_logininput_password">请输入密码</string>
    <string name="login_reg_logininput_password_again">请再次输入密码</string>
    <string name="login_reg_logininput_email">请输入邮箱以便找回密码</string>
    <string name="login_reg_logininput_login">登录</string>
    <string name="login_reg_logininput_login_get_pwd_btn">找回</string>
    <string name="login_reg_logininput_get_pwd">找回密码</string>
    <string name="login_reg_logininput_reg">注册</string>
    <string name="login_reg_logininput_reg_login">注册/登录</string>
    <string name="login_reg_email_logininput_reg">邮箱注册</string>
    <string name="login_reg_phone_perfect_reginfo">完善登录信息</string>
    <string name="login_reg_iphone_logininput_reg">手机注册</string>
    <string name="login_reg_logininput_forget">忘记密码？</string>

    <!-- 关于好友 -->
    <string name="friends_add_search">搜索</string>
    <string name="friends_add_click_search">点击搜索：</string>
    <string name="friends_add_search_firends">搜索好友</string>
    <string name="friends_add_search_firends_results">搜索结果</string>
    <string name="xxxxxxxxxxxxxxx">测试</string>
    <string name="tag_input_search">标签匹配</string>
    <string name="tag_input_request">标签检索</string>

    <!-- 页面“我” -->
    <string name="page_layout_me_me">我</string>
    <string name="page_layout_me_myfile">我的分享</string>
    <string name="page_layout_me_my_focus">我的关注</string>
    <string name="page_layout_me_focuseme">关注我的</string>
    <string name="page_layout_me_mymsg">我的消息</string>
    <string name="page_layout_me_myshoucang">我的收藏</string>
    <string name="page_layout_me_versionscan">版本检测</string>
    <string name="page_layout_me_feedback">吐槽产品</string>

    <!-- 关于推荐 -->
    <string name="friends_tj_pytj">朋友推荐</string>
    <string name="app_nologin_alerter_tip">提示</string>
    <string name="app_nologin_alerter_login">登        录</string>
    <string name="app_nologin_alerter_reg">注        册</string>

    <!-- 关于标签 -->
    <string name="tag_share_exist">标签库已经存在的标签：</string>
    <string name="tag_will_share_to_prove">贡献标签</string>
    <string name="tag_will_share_to_def_notice">点击给自己自定义标签</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

</resources>