<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/share_prepare_top_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <Button
            android:id="@+id/share_prepare_eating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/green_shape"
            android:text="@string/share_prepare_eat" />

        <Button
            android:id="@+id/share_prepare_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/qs_shape"
            android:text="@string/share_prepare_go" />

        <Button
            android:id="@+id/share_prepare_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_shape"
            android:text="@string/share_prepare_info" />
    </LinearLayout>

    <Button
        android:id="@+id/share_prepare_back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/grey_shape"
        android:gravity="center_horizontal"
        android:paddingBottom="1dp"
        android:text="@string/share_prepare_back" />

</LinearLayout>