<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- 注册界面 -->

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/space_title_bar" >

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:onClick="goback"
            android:src="@drawable/close_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_reg_phone_perfect_reginfo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <cn.com.hzzc.health.pro.part.LineEditText
        android:id="@+id/phone_reg_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/login_reg_logininput_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <cn.com.hzzc.health.pro.part.LineEditText
        android:id="@+id/phone_reg_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_reg_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/login_reg_logininput_password_again"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_reg_password_again"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/phone_reg_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ok_selector"
            android:onClick="regAccount"
            android:text="@string/login_reg_logininput_reg"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>