<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray" >

       <Button
            android:id="@+id/share_mine_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/share_mine_detail_back" />

        <Button
            android:id="@+id/share_mine_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/share_mine_detail_edit" />
        <!-- 这里写你的子控件 -->
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout" >

        <!-- ScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layout -->

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layoutScrollView有规则，内部只允许有一只child，所以需要把所有控件外层包裹一个layout"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:textSize="24sp" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray" >

        <Button
            android:id="@+id/share_mine_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/share_mine_detail_good" />

        <Button
            android:id="@+id/share_mine_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:text="@string/share_mine_detail_comment" />

        <Button
            android:id="@+id/share_mine_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/share_mine_detail_tag" />
        <!-- 这里写你的子控件 -->
    </RelativeLayout>

</RelativeLayout>