<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 个人信息展示页面 -->

    <RelativeLayout
        android:id="@+id/layout_space_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/space_title_bar"
        android:gravity="center_vertical" >

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/common_title_bar_color"
            android:onClick="backoff"
            android:src="@drawable/close_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/page_layout_me_me"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_space_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_space_title_bar"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <!-- 个人信息 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/preference_single_item"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/main_page_me_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix" />

            <TextView
                android:id="@+id/main_page_me_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/main_page_me_photo"
                android:text=""
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/main_page_me_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_page_me_name"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/main_page_me_photo"
                android:text=""
                android:textColor="#d0d0d0"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <!-- 每一个条目 -->

        <RelativeLayout
            android:id="@+id/main_page_me_dangan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/preference_first_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_dangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_myfile"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_myfocus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_my_focus"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_focuseme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_focusme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_focuseme"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_mymsg"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_shoucang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_shoucang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_myshoucang"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_versionscan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:id="@+id/me_my_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/page_layout_me_versionscan"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_page_me_tucao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_last_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="show_me_about" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="show_me_about"
                android:padding="8dp"
                android:text="@string/page_layout_me_feedback"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="matrix"
                android:src="@drawable/mm_submenu" />
        </RelativeLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/btn_style_red"
            android:gravity="center"
            android:onClick="logout"
            android:padding="4dp"
            android:text="退出登录"
            android:textColor="#fff"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/main_page_layout_common_bottom"
        android:background="@drawable/common_bottom_shape" />

</RelativeLayout>